syntax = "proto3";

option csharp_namespace = "ChatApp.WebHub.Protos";

package grpcservicepackage;


service GrpcServiceProto {
  rpc ForwardMessageToChatUsers (ForwardMessageToChatUsersRequest) returns (ForwardMessageToChatUsersReply);
}

message ForwardMessageToChatUsersRequest {
  repeated string guids = 1;
  string message = 2;
}

message ForwardMessageToChatUsersReply {
	bool isSuccess = 1;
	string message = 2;
}
